sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/Pit_Latrine_conversion_checklist__c.object-meta.xml
<CustomObject>
    <label>Pit Latrine conversion checklist</label>
    <nameField>
        <label>Pit Latrine conversion checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pit Latrine conversion checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>