sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Additional_details_about_slab_condition__c.field-meta.xml
<CustomField>
    <fullName>Additional_details_about_slab_condition__c</fullName>
    <label>Additional details about slab condition?</label>
    <type>TextArea</type>
</CustomField>