sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Anything_can_prohibit_pit_conversion__c.field-meta.xml
<CustomField>
    <fullName>Anything_can_prohibit_pit_conversion__c</fullName>
    <label>Anything can prohibit pit conversion?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>