sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Are_there_missing_parts_in_the_lining__c.field-meta.xml
<CustomField>
    <fullName>Are_there_missing_parts_in_the_lining__c</fullName>
    <label>Are there missing parts in the lining?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>