sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Assessor_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Name__c</fullName>
    <label>Assessor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joab Omondi</fullName>
            </value>
            <value>
                <fullName>Kevin Wairimu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>