sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Can_lining_be_patched__c.field-meta.xml
<CustomField>
    <fullName>Can_lining_be_patched__c</fullName>
    <label>Can lining be patched?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>