sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Depth_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Depth_Dimensions__c</fullName>
    <label>Depth Dimensions?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>