sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/FLO_Name__c.field-meta.xml
<CustomField>
    <fullName>FLO_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FLO Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pit Latrine conversion checklist</relationshipLabel>
    <relationshipName>Pit_Latrine_conversion_checklist</relationshipName>
    <type>Lookup</type>
</CustomField>