sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Foundations_of_houses_around_area_raised__c.field-meta.xml
<CustomField>
    <fullName>Foundations_of_houses_around_area_raised__c</fullName>
    <label>Foundations of houses around area raised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>