sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/How_full_is_the_Pit__c.field-meta.xml
<CustomField>
    <fullName>How_full_is_the_Pit__c</fullName>
    <label>How full is the Pit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partially full</fullName>
            </value>
            <value>
                <fullName>Mostly full</fullName>
            </value>
            <value>
                <fullName>Mostly Empty</fullName>
            </value>
            <value>
                <fullName>Empty or already exhausted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>