sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/In_position_to_inspect_Pit_latrine__c.field-meta.xml
<CustomField>
    <fullName>In_position_to_inspect_Pit_latrine__c</fullName>
    <label>In position to inspect Pit latrine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>