sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/is_the_area_surface_uneven_or_down_slope__c.field-meta.xml
<CustomField>
    <fullName>is_the_area_surface_uneven_or_down_slope__c</fullName>
    <label>is the area surface uneven or down slope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>