sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/is_the_slab_visibly_leaning_or_uneven_1__c.field-meta.xml
<CustomField>
    <fullName>is_the_slab_visibly_leaning_or_uneven_1__c</fullName>
    <label>is the slab visibly leaning or uneven 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>