sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Is_there_open_sewer_5m_from_the_locatio__c.field-meta.xml
<CustomField>
    <fullName>Is_there_open_sewer_5m_from_the_locatio__c</fullName>
    <label>Is there open sewer 5m from  the locatio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>