sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Is_there_sufficient_space_to_build_1FLT__c.field-meta.xml
<CustomField>
    <fullName>Is_there_sufficient_space_to_build_1FLT__c</fullName>
    <label>Is there sufficient space to build 1FLT?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>