sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/List_required_prep_work_for_the_owner__c.field-meta.xml
<CustomField>
    <fullName>List_required_prep_work_for_the_owner__c</fullName>
    <label>List required prep. work for the owner?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>