sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/List_the_required_equipment__c.field-meta.xml
<CustomField>
    <fullName>List_the_required_equipment__c</fullName>
    <label>List the required equipment?</label>
    <length>16</length>
    <type>Text</type>
</CustomField>