sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>Sub_Area__c</referenceTo>
    <relationshipLabel>Pit Latrine conversion checklist</relationshipLabel>
    <relationshipName>Pit_Latrine_conversion_checklist</relationshipName>
    <type>Lookup</type>
</CustomField>