sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Pit_latrine_on_basement_or_masonry_rock__c.field-meta.xml
<CustomField>
    <fullName>Pit_latrine_on_basement_or_masonry_rock__c</fullName>
    <label>Pit latrine on basement or masonry rock?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>