sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Please_provide_additional_information__c.field-meta.xml
<CustomField>
    <fullName>Please_provide_additional_information__c</fullName>
    <label>Please provide additional information?</label>
    <type>TextArea</type>
</CustomField>