sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Preparation_be_done_before_we_convert__c.field-meta.xml
<CustomField>
    <fullName>Preparation_be_done_before_we_convert__c</fullName>
    <label>Preparation  be done before we convert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>