sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Proposed_Number_of_FLTs_to_be_installed__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Number_of_FLTs_to_be_installed__c</fullName>
    <label>Proposed Number of FLTs to be installed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One FLT (6ft by 8ft or by 10ft with up structure)</fullName>
            </value>
            <value>
                <fullName>Two FLTs (10ft by 8ft or by 10ft with up structure)</fullName>
            </value>
            <value>
                <fullName>Three FLTs (12ft by 8ft or by 10ft with up structure)</fullName>
            </value>
            <value>
                <fullName>Four FLTs (14ft by 8ft or by 10ft with up structure)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>