sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Safe_store_for_pit_conversion_materials__c.field-meta.xml
<CustomField>
    <fullName>Safe_store_for_pit_conversion_materials__c</fullName>
    <label>Safe store for pit conversion materials?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>