sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Share_Additional_info_and_Recommadation__c.field-meta.xml
<CustomField>
    <fullName>Share_Additional_info_and_Recommadation__c</fullName>
    <label>Share Additional info. and Recommadation</label>
    <type>TextArea</type>
</CustomField>