sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Slab_reinforced_with_twisted_bars_wire_m__c.field-meta.xml
<CustomField>
    <fullName>Slab_reinforced_with_twisted_bars_wire_m__c</fullName>
    <label>Slab reinforced with twisted bars,wire m</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>