sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Slab_thickness_less_than_150mm__c.field-meta.xml
<CustomField>
    <fullName>Slab_thickness_less_than_150mm__c</fullName>
    <label>Slab thickness less than 150mm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>