sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Space_btwn_slab_and_sludge_less_than_2ft__c.field-meta.xml
<CustomField>
    <fullName>Space_btwn_slab_and_sludge_less_than_2ft__c</fullName>
    <label>Space btwn slab and sludge less than 2ft</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>