sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Special_Equipment_required_demolish_supe__c.field-meta.xml
<CustomField>
    <fullName>Special_Equipment_required_demolish_supe__c</fullName>
    <label>Special Equipment required demolish supe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>