sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/Visible_cracks_along_mortar_joints_upstr__c.field-meta.xml
<CustomField>
    <fullName>Visible_cracks_along_mortar_joints_upstr__c</fullName>
    <label>Visible cracks along mortar joints upstr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>