sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/fields/What_is_the_shape_of_the_Pit__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_shape_of_the_Pit__c</fullName>
    <label>What is the shape of the Pit?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>