sfSandBoxCode/force-app/main/default/objects/Pit_Latrine_conversion_checklist__c/recordTypes/Pit_Latrine_Conversion_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Pit_Latrine_Conversion_Checklist</fullName>
    <active>true</active>
    <label>Pit Latrine Conversion Checklist</label>
</RecordType>